[package]
name = "iced_renderer"
description = "The official renderer for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
image = ["iced_tiny_skia/image"]
svg = ["iced_tiny_skia/svg"]
geometry = ["iced_graphics/geometry", "iced_tiny_skia/geometry"]
tracing = []
web-colors = []
webgl = []
fira-sans = ["iced_graphics/fira-sans"]
wgpu = []

[dependencies]
iced_graphics.workspace = true
iced_tiny_skia.workspace = true

log.workspace = true
thiserror.workspace = true
